add github repo link

--- a/style.css
+++ b/style.css
@@ -85,3 +85,14 @@ body {
     transform: translateY(360px) scaleY(0) scaleX(15);
   }
 }
+
+.gh-link {
+  text-align: center;
+  margin-bottom: 100px;
+}
+
+a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 5rem;
+}
